change files name

--- a/make_my_dictionary.ipynb
+++ b/make_my_dictionary.ipynb
@@ -221,6 +221,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "970e639f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import docx\n",
+    "\n",
+    "document = docx.Document()\n",
+    "\n",
+    "templ = docx.Document(\"badwords.docx\")\n",
+    "document_explicit = []\n",
+    "for line, p in enumerate(templ.paragraphs):\n",
+    "    document_explicit.append(p.text.replace(' ',''))\n",
+    "\n",
+    "explicit.update(document_explicit)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "id": "8834138f",
    "metadata": {},
